# cmake-qt6-template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
mylibrary/: CMakeLists.txt
mylibrary/include/: mylibrary.h
mylibrary/src/: mylibrary.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/resources/: app.rc  resource.qrc
src/resources/ui/: ui_mainwindow.h
